@@ -1,3 +1,5 @@
+* Avoid prefiltering in client_api() if the selector contains `:not` and move the `ID optimization LTR` block under the `ID optimization RTL` block. [jddalton]
+
 * Move the client_api() `ID optimization RTL` block into the `reduce selection context` block to reduce tests if Optimize.id isn't matched in the selector. [jddalton]
 
 * Ensure the element returned by gEBID actually has the id in the `reduce selection context` block of client_api(). [jddalton]
